Implement code changes to enhance functionality and improve performance

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,34 @@
+# macOS system files
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Python cache/bytecode
 __pycache__/
-results/
+*.pyc
+*.pyo
+*.pyd
+
+# Virtual environments
+.venv/
+venv/
+ENV/
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints/
+
+# Logs
+*.log
+
+# Build and packaging
+build/
+dist/
+*.egg-info/
+
+# IDE / editor configs
+.vscode/
+.idea/
+*.swp
+
+# Environment variables
+.env
